# mcdu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
src/: app.rs  cache.rs  changes.rs  delete.rs  logger.rs  main.rs  modal.rs  platform.rs  scan.rs  ui.rs
