[package]
name = "mcdu"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.29"
walkdir = "2"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
xattr = "1.0"
nix = { version = "0.28", features = ["process"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
